# SUMO-Virtual-Experiment-Sidecar

./: .gitignore  README.md  pyproject.toml
docs/: codex-bridge.md
docs/superpowers/plans/: 2026-06-12-sumo-virtual-experiment-sidecar-mvp.md
examples/minimal-paired/: README.md  baseline.sumocfg  demand.rou.xml  grid.net.xml  variant.sumocfg
examples/minimal-paired/outputs/variant/: .gitkeep
src/sumo_sidecar/: __init__.py  config_patch.py  config_preflight.py  demo_runner.py  models.py  output_inspection.py  scenario_templates.py  server.py  session_manager.py  sumo_adapter.py  visual_observation_taxonomy.py
static/: app.js  index.html  styles.css
tests/: test_api.py  test_config_patch.py  test_config_preflight.py  test_minimal_example.py  test_output_inspection.py  test_session_manager.py
